@startuml
title 面向马来西亚留学生的汉语练习平台在线答题模块数据关系图
skinparam defaultFontName "Noto Sans CJK SC"
skinparam shadowing false
skinparam backgroundColor white
skinparam ArrowColor #3C5488
skinparam ActorBorderColor #3C5488
skinparam ActorFontColor #111827
skinparam UsecaseBorderColor #0072B2
skinparam UsecaseBackgroundColor #F8FBFF
skinparam ComponentBorderColor #0072B2
skinparam ComponentBackgroundColor #F8FBFF
skinparam DatabaseBorderColor #009E73
skinparam DatabaseBackgroundColor #F4FFF9
skinparam SequenceLifeLineBorderColor #3C5488
skinparam ParticipantBorderColor #0072B2
skinparam ParticipantBackgroundColor #F8FBFF
skinparam ActivityBorderColor #0072B2
skinparam ActivityBackgroundColor #F8FBFF

class "在线答题模块请求参数" as Req {
  +userId
  +query
  +payload
}
class "在线答题模块响应结果" as Res {
  +code
  +message
  +data
}
class "study_records" as D0 {
  +id
  +业务字段
  +时间字段
}
class "user_answers" as D1 {
  +id
  +业务字段
  +时间字段
}
class "wrong_questions" as D2 {
  +id
  +业务字段
  +时间字段
}
Req --> D0 : /api/learning/papers/:id/submit
Req --> D1 : /api/learning/papers/:id/submit
Req --> D2 : /api/learning/papers/:id/submit
D0 --> D1 : 试卷答题、提交判分、答案记录和错题写入
D1 --> D2 : 试卷答题、提交判分、答案记录和错题写入
D0 --> Res : 组装返回
@enduml